Collectiosn filter - overlap fix
Reverse logic has already been applied for visibility.

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -838,10 +838,6 @@ details.menu-opening .mobile-facets__close svg {
   overflow-y: auto;
 }
 
-.js .mobile-facets .submenu-open {
-  visibility: hidden; /* hide menus from screen readers when hidden by submenu */
-}
-
 .mobile-facets__item {
   position: relative;
 }
